# A-MAZE-ING

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  mazegen.py  pyproject.toml  requirements.txt
src/: __init__.py  config_parser.py  display.py  generator.py  pathfinder.py  writer.py
